# electronics_platform

./: .env.example  .gitignore  manage.py  pyproject.toml  readme.md  requirements.txt
electronics_platform/: asgi.py  settings.py  urls.py  wsgi.py
network/: admin.py  factories.py  models.py  permissions.py  serializers.py  urls.py  views.py
network/management/commands/: loaddata.py  loadfakedata.py
network/migrations/: 0001_initial.py  0002_alter_address_city_alter_address_country_and_more.py  0002_alter_address_house_number.py  0002_remove_businessman_contacts_and_more.py  0003_remove_plant_debt_value.py  0003_rename_factory_network_plant.py  0004_alter_network_options_and_more.py  0004_remove_distributor_contacts_and_more.py  0005_alter_businessman_name_alter_plant_name_and_more.py  0005_remove_businessman_debt_currency_and_more.py  0006_alter_businessman_name_alter_plant_name_and_more.py  0006_remove_businessman_debt_remove_dealership_debt_and_more.py  0007_businessman_debt_value_dealership_debt_value_and_more.py
