[tool.poetry]
name = "electronics-platform"
version = "0.1.0"
description = ""
authors = ["gmoroz <12345hasek@gmail.com>"]
readme = "README.md"
packages = [{include = "electronics_platform"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djangorestframework = "^3.14.0"
factory-boy = "^3.2.1"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"
setuptools = "^66.1.0"
djoser = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
